// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert should match snapshot 1`] = `
Object {
  "data": Object {
    "upsertGauge": Object {
      "code": "nor5",
      "cron": "10 * * * *",
      "flowUnit": "m3/s",
      "levelUnit": "cm",
      "location": Object {
        "coordinates": Array [
          11.1,
          12.2,
          1.1,
        ],
        "kind": "gauge",
      },
      "name": "norway gauge 5",
      "requestParams": Object {
        "foo": "bar",
      },
      "source": Object {
        "name": "Norway",
      },
      "url": "http://nve.no/nor5",
    },
  },
}
`;

exports[`update should match snapshot 1`] = `
Object {
  "data": Object {
    "upsertGauge": Object {
      "code": "gal1",
      "cron": "10 * * * *",
      "flowUnit": "cm3/s",
      "levelUnit": "m",
      "location": Object {
        "coordinates": Array [
          11.1,
          12.2,
          1.1,
        ],
        "kind": "gauge",
      },
      "name": "GALICIA GAUGE 1",
      "requestParams": Object {
        "lol": "fun",
      },
      "source": Object {
        "name": "Galicia",
      },
      "url": "http://galic.ia/gal1",
    },
  },
}
`;
